Bump ver, compile dlls at runtime, remove embedded pack